# roadmark

./: .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  dist-workspace.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-crates-io.yml  release.yml
.roadmap/: config.toml
.roadmap/features/: f-add.md  f-ci-publish.md  f-crates-io.md  f-crlf-parsing.md  f-generate.md  f-init.md  f-prebuilt-binaries.md  f-rename.md  f-rmk-alias.md  f-roadmark-dir-rename.md  f-schema-v2.md  f-validate-action.md  f-validate.md
docs/adr/: 0001-single-source-of-truth.md
examples/.roadmap/: config.toml
examples/.roadmap/features/: f-example-feature.md
src/: add.rs  lib.rs  main.rs  rename.rs  validate.rs
tests/: generate.rs  validate.rs
tests/fixtures/minimal/: config.toml
tests/fixtures/minimal/features/: f-llm-plugin.md  f-roadmap-toml-source.md  f22.md
tests/snapshots/: generate__minimal_fixture_round_trip.snap
