[package]
name = "roadmark"
version = "0.4.0"
edition = "2021"
rust-version = "1.85"
authors = ["Bastien Gallay <bastien@gallay.org>"]
description = "Generate a ROADMAP.md from a .roadmap/ directory of TOML-frontmatter feature files."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bastien-gallay/roadmap-cli"
readme = "README.md"
keywords = ["roadmap", "cli", "markdown", "generator"]
categories = ["command-line-utilities"]

[[bin]]
name = "roadmark"
path = "src/main.rs"

[lib]
name = "roadmark"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
walkdir = "2.5"

[dev-dependencies]
insta = "1.41"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
