[package]
name = "roadmark"
version = "0.5.1"
edition = "2021"
rust-version = "1.85"
authors = ["Bastien Gallay <bastien@gallay.org>"]
description = "Generate a ROADMAP.md from a .roadmap/ directory of TOML-frontmatter feature files."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bastien-gallay/roadmark"
readme = "README.md"
keywords = ["roadmap", "cli", "markdown", "generator"]
categories = ["command-line-utilities"]

# Ship only what a consumer of the crate needs: sources, the license pair,
# the README (rendered on crates.io) and the changelog. Everything else
# (CI config, .roadmap/ dogfood tree, examples, docs, test fixtures, dist
# config) is dev/infra weight and stays out of the published tarball.
# Patterns are gitignore-style: a leading `/` anchors to the package root
# so a bare name (e.g. README.md) can't also match a nested file such as
# .personal/README.md. `include` overrides .gitignore, so anchoring matters.
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[[bin]]
name = "roadmark"
path = "src/main.rs"

[lib]
name = "roadmark"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
walkdir = "2.5"

[dev-dependencies]
insta = "1.41"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
